# ChangeLog for kde-base/kdeadmin
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeadmin/ChangeLog,v 1.55 2003/12/03 23:14:17 caleb Exp $

*kdeadmin-3.2.0_beta2 (03 Dec 2003)

  03 Dec 2003; Caleb Tennis <caleb@gentoo.org> kdeadmin-3.2.0_beta2.ebuild:
  New beta version

  29 Nov 2003; Brad House <brad_mssw@gentoo.org> kdeadmin-3.1.4.ebuild:
  mark stable on amd64

  20 Nov 2003; Luca Barbato <lu_zero@gentoo.org> kdeadmin-3.1.4.ebuild:
  Marked ppc

*kdeadmin-3.2.0_beta1 (02 Nov 2003)

  02 Nov 2003; root <root@gentoo.org> kdeadmin-3.2.0_beta1.ebuild:
  New beta version

  04 Oct 2003; Brad House <brad_mssw@gentoo.org> kdeadmin-3.1.4.ebuild:
  add ~amd64 flag

  27 Sep 2003; Caleb Tennis <caleb@gentoo.org> kdeadmin-2.2.2.ebuild,
  kdeadmin-2.2.2.ebuild, kdeadmin-3.1.1-r2.ebuild, kdeadmin-3.1.1-r2.ebuild,
  kdeadmin-3.1.3.ebuild, kdeadmin-3.1.3.ebuild:
  removing stale versions

*kdeadmin-3.2.0_alpha2 (27 Sep 2003)

  27 Sep 2003; Caleb Tennis <caleb@gentoo.org> kdeadmin-3.2.0_alpha2.ebuild:
  new alpha version

  26 Sep 2003; Jason Wever <weeve@gentoo.org> kdeadmin-3.1.4.ebuild:
  Added sparc keyword.

  25 Sep 2003; Caleb Tennis <caleb@gentoo.org> kdeadmin-3.1.4.ebuild:
  marking x86 stable

*kdeadmin-3.1.4 (16 Sep 2003)

  16 Sep 2003; Caleb <caleb@gentoo.org> kdeadmin-3.1.4.ebuild:
  new version

  16 Sep 2003; Jason Wever <weeve@gentoo.org> kdeadmin-3.1.3.ebuild:
  Marked stable for sparc.

  07 Sep 2003; Caleb Tennis <caleb@gentoo.org> kdeadmin-3.1.3.ebuild:
  x86 stable

  27 Aug 2003; Caleb Tennis <caleb@gentoo.org> kdeadmin-3.1.3.ebuild:
  Commented out the foreign-package use flag compilation stuff as it's
  broken with newer rpm versions.

  13 Aug 2003; Jason Wever <weeve@gentoo.org> kdeadmin-3.1.1-r2.ebuild:
  Marked for sparc to fix repoman dep issues.

  13 Aug 2003; Jason Wever <weeve@gentoo.org> kdeadmin-3.1.3.ebuild:
  Added ~sparc to keywords.
