@@ -1,10 +1,10 @@
 MD5 be064c51dc99d15eac923e8eebd2e84e kdeadmin-3.1.4.ebuild 1363
 MD5 b2bdd0b01b78395be6bcb5d5af6a4d4b kdeadmin-3.0.5b.ebuild 791
 MD5 4b814e1828f9b286c828e94bec18aca7 kdeadmin-3.2.0_beta1.ebuild 1243
-MD5 18b629a78f73d38f3b6b33032a31772f ChangeLog 7450
+MD5 e979355c068cdcb5c8f99e7ee30e6cb0 ChangeLog 7552
 MD5 14889ab75f97d76e58b0c1154e7683a9 metadata.xml 161
 MD5 97025c29f78ad5392ab528a179326531 kdeadmin-3.0.4.ebuild 528
-MD5 56cc9a783eebcbc3825fa7d70779b73f kdeadmin-3.2.0_beta2.ebuild 1243
+MD5 8e672f57c9c744233e1250cb3b0f73df kdeadmin-3.2.0_beta2.ebuild 1038
 MD5 a6705bd443a458d94e5cb40b6d8d17cd kdeadmin-3.1.2.ebuild 1599
 MD5 cfd611aaf828a1fb0407ac3a55ce0167 files/digest-kdeadmin-3.2.0_beta1 69
 MD5 8e7d18ab7de7bfdfaa653d7bf258c101 files/digest-kdeadmin-3.2.0_beta2 69
